--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "grunt-notify": "^0.3.0",
     "grunt-karma-coveralls": "^2.5.1",
-    "grunt-coveralls": "^0.3.0"
+    "grunt-coveralls": "^0.3.0",
+    "grunt-contrib-jasmine": "^0.6.5"
   },
   "dependencies": {
     "jquery": "^2.1.1"
