--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "grunt-notify": "^0.3.0",
     "grunt-karma-coveralls": "^2.5.1",
     "grunt-coveralls": "^0.3.0",
-    "grunt-contrib-jasmine": "^0.6.5"
+    "grunt-contrib-jasmine": "^0.6.5",
+    "grunt-contrib-concat": "^0.4.0"
   },
   "dependencies": {
     "jquery": "^2.1.1"
