--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-concat": "^0.4.0"
   },
   "dependencies": {
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "markdown": "^0.5.0" 
   }
 }
