--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "grunt-karma-coveralls": "^2.5.1",
     "grunt-coveralls": "^0.3.0",
     "grunt-contrib-jasmine": "^0.6.5",
-    "grunt-contrib-concat": "^0.4.0"
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-coffee": "^0.11.1"
   },
   "dependencies": {
     "jquery": "^2.1.1",
-    "markdown": "^0.5.0" 
+    "markdown": "^0.5.0"
   }
 }
