--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "grunt-coveralls": "^0.3.0",
     "grunt-contrib-jasmine": "^0.6.5",
     "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-coffee": "^0.11.1"
+    "grunt-contrib-coffee": "^0.11.1",
+    "gulp": "^3.8.8"
   },
   "dependencies": {
     "jquery": "^2.1.1",
