--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "grunt-contrib-jasmine": "^0.6.5",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-coffee": "^0.11.1",
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "gulp-coffee": "^2.2.0",
+    "gulp-util": "^3.0.1"
   },
   "dependencies": {
     "jquery": "^2.1.1",
