--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "grunt-contrib-coffee": "^0.11.1",
     "gulp": "^3.8.8",
     "gulp-coffee": "^2.2.0",
-    "gulp-util": "^3.0.1"
+    "gulp-util": "^3.0.1",
+    "gulp-concat": "^2.4.1",
+    "gulp-uglify": "^1.0.1",
+    "gulp-rename": "^1.2.0"
   },
   "dependencies": {
     "jquery": "^2.1.1",
