--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     "gulp-util": "^3.0.1",
     "gulp-concat": "^2.4.1",
     "gulp-uglify": "^1.0.1",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-add-src": "^0.1.1",
+    "gulp-jasmine": "^1.0.1",
+    "gulp-notify": "^2.0.0",
+    "gulp-karma": "0.0.4"
   },
   "dependencies": {
     "jquery": "^2.1.1",
