--- a/package.json
+++ b/package.json
@@ -21,34 +21,35 @@
   "homepage": "https://github.com/NightingaleStudio/exam.js",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-coffee": "^0.11.1",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-contrib-jasmine": "^0.6.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "karma": "^0.12.16",
-    "grunt-karma": "^0.8.3",
-    "karma-jasmine": "^0.1.5",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-coverage": "^0.2.4",
-    "grunt-contrib-connect": "^0.7.1",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "grunt-notify": "^0.3.0",
-    "grunt-karma-coveralls": "^2.5.1",
     "grunt-coveralls": "^0.3.0",
-    "grunt-contrib-jasmine": "^0.6.5",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-coffee": "^0.11.1",
+    "grunt-karma": "^0.8.3",
+    "grunt-karma-coveralls": "^2.5.1",
+    "grunt-mocha": "^0.4.12",
+    "grunt-notify": "^0.3.0",
     "gulp": "^3.8.8",
-    "gulp-coffee": "^2.2.0",
-    "gulp-util": "^3.0.1",
-    "gulp-concat": "^2.4.1",
-    "gulp-uglify": "^1.0.1",
-    "gulp-rename": "^1.2.0",
     "gulp-add-src": "^0.1.1",
+    "gulp-coffee": "^2.2.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-karma": "0.0.4",
     "gulp-notify": "^2.0.0",
-    "gulp-karma": "0.0.4"
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "karma": "^0.12.16",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "^0.2.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1"
   },
   "dependencies": {
     "markdown": "^0.5.0"
