--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-coveralls": "^0.3.0",
     "grunt-karma": "^0.8.3",
     "grunt-karma-coveralls": "^2.5.1",
+    "grunt-mocha-test": "^0.12.7",
     "grunt-notify": "^0.3.0",
     "gulp": "^3.8.8",
     "gulp-add-src": "^0.1.1",
@@ -48,7 +49,8 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1"
+    "karma-safari-launcher": "^0.1.1",
+    "mocha": "^2.2.1"
   },
   "dependencies": {
     "markdown": "^0.5.0"
