--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-coveralls": "^0.3.0",
+    "grunt-jison": "^1.3.2",
     "grunt-karma": "^0.8.3",
     "grunt-karma-coveralls": "^2.5.1",
     "grunt-mocha-test": "^0.12.7",
