--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "exam.js",
-  "version": "0.0.0",
-  "description": "exam.js =======",
+  "name": "Exam.js",
+  "version": "0.4.1",
+  "description": "Exam.js is simple markup language library for creating an interactive questions with markdown and mathjax support",
   "main": "exam.js",
   "directories": {
     "test": "test"
