--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jison": "^1.3.2",
+    "grunt-karma": "^0.12.1",
     "grunt-mocha-test": "^0.12.7",
     "grunt-notify": "^0.3.0",
-    "mocha": "^2.2.1"
+    "karma": "^0.13.10",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "mocha": "^2.2.1",
+    "phantomjs": "^1.9.18"
   },
   "dependencies": {
     "markdown": "^0.5.0"
