--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-mocha-test": "^0.12.7",
     "grunt-notify": "^0.3.0",
     "karma": "^0.13.10",
+    "karma-coverage": "^0.5.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "mocha": "^2.2.1",
