--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ node_js:
   - "0.12"
 before_install: npm install -g grunt-cli
 install: npm install
+addons:
+  code_climate:
+      repo_token: aff33f...
+after_script:
+  - codeclimate-test-reporter < lcov.info
