--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install: npm install -g grunt-cli
 install: npm install
 addons:
   code_climate:
-      repo_token: aff33f...
+      repo_token: 35acd8441b1656427e25db959771ca7a98d3ffb18df8b859ff48ee0cff0313ab
 after_script:
   - codeclimate-test-reporter < lcov.info
