change package name and author

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "exam.js",
+  "name": "exam-js",
   "version": "0.4.2",
   "description": "Exam.js is simple markup language library for creating an interactive questions with markdown and mathjax support",
-  "main": "exam.js",
   "author": "Sergey Golovin <golovim@gmail.com> (http://github.com/daynin)",
   "directories": {
     "dist": "./dist",
